Add remove games from wishlist/played in search page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -284,6 +284,7 @@ footer {
     font-size: 14px;
     width: 400px;
     text-align: left;
+    z-index: 999;
 }
 
 [class*='uk-dropdown-bottom'] {
