--- a/app/views/static_pages/_game_info.html.erb
+++ b/app/views/static_pages/_game_info.html.erb
@@ -34,71 +34,79 @@
         <!-- NAVIGATION -->
         <div class="info-nav">
             <ul class="uk-iconnav">
+                <!-- COLLECTION -->
                 <li><button id="add-collection-<%= game['id'] %>" class="icon-btn uk-icon-link" uk-icon='icon: database'></button></li>
-                <li>
-                    <% collection = current_user.collections.find_by(name: 'Wishlist') %>
-                    <%= render partial: "add_form_no_platform", locals: { game: game, collection_id: collection.id, icon: 'star' } %>
-                </li>
-                <li>
-                    <% collection = current_user.collections.find_by(name: 'I\'ve Played This') %>
-                    <%= render partial: "add_form_no_platform", locals: { game: game, collection_id: collection.id, icon: 'bell' } %>
-                </li>
+                <!-- WISHLIST -->
+                <% collection = current_user.collections.find_by(form: 'wishlist') %>
+                <% added = collection.games.find_by(igdb_id: game['id']) ? true : false %>
+                <%= content_tag(:li, id: "add-wishlist-form-" + game['id'].to_s, style: added ? 'display: none;' : nil) do %>
+                <%= render partial: "add_form_no_platform",
+                locals: { game: game, collection: collection, icon: 'star' } %>
+                <% end %>
+                <%= content_tag(:li, id: "remove-wishlist-form-" + game['id'].to_s, style: !added ? 'display: none;' : nil) do %>
+                <%= link_to "X", remove_s_url(game_igdb_id: game['id'], collection_id: collection.id), method: :delete, remote: true %>
+                <% end %>
+                <!-- PLAYED -->
+                <% collection = current_user.collections.find_by(form: 'played') %>
+                <% added = collection.games.find_by(igdb_id: game['id']) ? true : false %>
+                <%= content_tag(:li, id: "add-played-form-" + game['id'].to_s, style: added ? 'display: none;' : nil) do %>
+                <%= render partial: "add_form_no_platform",
+                locals: { game: game, collection: collection, icon: 'bell' } %>
+                <% end %>
+                <%= content_tag(:li, id: "remove-played-form-" + game['id'].to_s, style: !added ? 'display: none;' : nil) do %>
+                <%= link_to "X", remove_s_url(game_igdb_id: game['id'], collection_id: collection.id), method: :delete, remote: true %>
+                <% end %>
+                <!-- CUSTOM -->
                 <li><button id="add-custom-<%= game['id'] %>"class="icon-btn uk-icon-link" uk-icon='icon: settings'></button></li>
             </ul>
         </div>
         <!-- ADD GAME TO COLLECTION -->
-            <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>;mode: click; delay-hide: 100">
-                <%= form_for(:game, url: games_path, remote: true) do |f| %>
-                <% collection = current_user.collections.find_by(name: 'My Collection') %>
-                <%= hidden_field_tag :collection, collection.id %>
-                <%= hidden_field_tag :form_type, 'collection' %>
-                <%= f.hidden_field :needs_platform, value: true %>
-                <%= f.hidden_field :name, value: game['name'] %>
-                <%= f.hidden_field :igdb_id, value: game['id'] %>
-                    <% scalp_platforms(game).each do |pid| %>
-                <%= f.hidden_field :platforms, value: pid, multiple: true %>
-                <% end %>
-                <label><%= f.radio_button(:physical, true, checked: true) %>Physical</label>
-                <label><%= f.radio_button(:physical, false) %>Digital</label>
-                <% if game['platforms'].size > 1 %>
-                <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
-                <% else %>
-                <%= f.select(:platform, platforms_for_select(game)) %>
-                <% end %>
-                <%= f.submit "Add to #{collection.custom_name || collection.name }", class: "btn btn-primary" %>
-                <% end %>
-                <div class="add-form-errors">[]</div>
-            </div>
+        <div id="add-collection-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-collection-<%= game['id'] %>;mode: click; delay-hide: 100">
+            <%= form_for(:game, url: games_path, remote: true) do |f| %>
+            <% collection = current_user.collections.find_by(name: 'My Collection') %>
+            <%= hidden_field_tag :collection, collection.id %>
+            <%= f.hidden_field :needs_platform, value: true %>
+            <%= f.hidden_field :name, value: game['name'] %>
+            <%= f.hidden_field :igdb_id, value: game['id'] %>
+            <% scalp_platforms(game).each do |pid| %>
+            <%= f.hidden_field :platforms, value: pid, multiple: true %>
+            <% end %>
+            <label><%= f.radio_button(:physical, true, checked: true) %>Physical</label>
+            <label><%= f.radio_button(:physical, false) %>Digital</label>
+            <% if game['platforms'].size > 1 %>
+            <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
+            <% else %>
+            <%= f.select(:platform, platforms_for_select(game)) %>
+            <% end %>
+            <%= f.submit "Add to #{collection.custom_name || collection.name }", class: "btn btn-primary" %>
+            <% end %>
+            <div class="add-form-errors">[]</div>
+        </div>
         <!-- ADD TO CUSTOM COLLECTION -->
-                <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>;mode: click; delay-hide: 100">
-
-                <% if current_user.collections.where(default: false).present? %>
-                <%= form_for(:game, url: games_path, remote: true) do |f| %>
-                <%= hidden_field_tag :form_type, 'custom' %>
-                <%= f.hidden_field :needs_platform, value: true %>
-                <%= f.hidden_field :name, value: game['name'] %>
-                <%= f.hidden_field :igdb_id, value: game['id'] %>
-                <% scalp_platforms(game).each do |pid| %>
-                    <%= f.hidden_field :platforms, value: pid, multiple: true %>
-                <% end %>
-
-                <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), prompt: 'Select Collection') %>
-                <% if game['platforms'].size > 1 %>
-                <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
-                <% else %>
-                <%= f.select(:platform, platforms_for_select(game)) %>
-                <% end %>
-                <label><%= f.radio_button(:physical, true, checked: true) %>Physical</label>
-                <label><%= f.radio_button(:physical, false) %>Digital</label>
-
-                <%= f.submit 'Add', class: "btn btn-primary" %>
-                <% end %>
-                <div class="add-form-errors">[]</div>
-                <% else %>
-                <p>No custom collections to add games to!</p>
-                <% end %>
-
-            </div>
+        <div id="add-custom-form-<%= game['id'] %>" class="add-form" uk-dropdown="toggle: #add-custom-<%= game['id'] %>;mode: click; delay-hide: 100">
+            <% if current_user.collections.where(default: false).present? %>
+            <%= form_for(:game, url: games_path, remote: true) do |f| %>
+            <%= f.hidden_field :needs_platform, value: true %>
+            <%= f.hidden_field :name, value: game['name'] %>
+            <%= f.hidden_field :igdb_id, value: game['id'] %>
+            <% scalp_platforms(game).each do |pid| %>
+            <%= f.hidden_field :platforms, value: pid, multiple: true %>
+            <% end %>
+            <%= select_tag(:collection, options_for_select(collections_for_select(current_user)), prompt: 'Select Collection') %>
+            <% if game['platforms'].size > 1 %>
+            <%= f.select(:platform, platforms_for_select(game), prompt: 'Select Platform') %>
+            <% else %>
+            <%= f.select(:platform, platforms_for_select(game)) %>
+            <% end %>
+            <label><%= f.radio_button(:physical, true, checked: true) %>Physical</label>
+            <label><%= f.radio_button(:physical, false) %>Digital</label>
+            <%= f.submit 'Add', class: "btn btn-primary" %>
+            <% end %>
+            <div class="add-form-errors">[]</div>
+            <% else %>
+            <p>No custom collections to add games to!</p>
+            <% end %>
+        </div>
         <hr class="nav-bottom">
         <!-- SUMMARY -->
         <% if summary = get_summary(game, 280, 50) %>
